--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@ body{
   float:left;
   width:50%;
 }
+.log{
+  clear:both;
+  display:none;
+}
 </style>
 <link rel="stylesheet" href="/leaflet.css" />
 
@@ -87,10 +91,13 @@ body{
       Battery:
         <span class='battery'>0</span>%
     </div>
+    <pre class="log">no data</pre>
   </div>
 
   <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
   <script src="leaflet.js"></script>
+  <script src="gamepad-client.js"></script>
+  <script src="gamepad-calibration.js"></script>
   <script src="leaflet-google.js"></script>
   <script src="/dronestream/nodecopter-client.js"></script>
   <script src="jquery.js"></script>
@@ -103,7 +110,7 @@ body{
     var activeWaypoints = [];
     var waypoints = [];
     var follow = false;
-  
+
     var phoneIcon = L.icon({
         iconUrl: 'images/iphone.png'
     });
@@ -207,8 +214,9 @@ body{
          follow = true
        })
        $('#manual').click(function(){
-         // control via xbox
          follow = false
+         clearCurrentTarget()
+         nodecopterGamepad.initGamepad(socket);
        })
      })
 
